--- a/conf.d/docker_daemon.yaml.example
+++ b/conf.d/docker_daemon.yaml.example
@@ -63,6 +63,31 @@ instances:
     #
     # health_service_check_whitelist: []
 
+    # Collect the total container count with the docker.containers.count metric.
+    # Defaults to false.
+    #
+    # collect_container_count: false
+
+    # Collect the count of all containers in Dead state with the docker.container.state_dead.count metric.
+    # Defaults to false.
+    #
+    # collect_dead_container_count: false
+
+    # Collect the count of all containers in Exited state with the docker.container.state_exited.count metric.
+    # Defaults to false.
+    #
+    # collect_exited_container_count: false
+
+    # Collect the total volume count with the docker.volumes.count metric.
+    # Defaults to false.
+    #
+    # collect_volume_count: false
+
+    # Collect the count of all dangling volumes with the docker.volumes.dangling.count metric.
+    # Defaults to false.
+    #
+    # collect_dangling_volume_count: false
+
     # Collect images stats
     # Number of available active images and intermediate images as gauges.
     # Defaults to false.
