--- a/conf.d/riak.yaml.example
+++ b/conf.d/riak.yaml.example
@@ -4,6 +4,7 @@ instances:
   - url: http://127.0.0.1:8098/stats
     # cacert: /path/to/ca.pem
     # disable_cert_verify: false
+  - min_collection_interval: 60
     # tags:
     #  - optional_tag1
     #  - optional_tag2
