[dns_check] support monitoring the performance of NXDOMAIN queries
[olivier.vielpeau@datadoghq.com: Rebased on top of master]

--- a/conf.d/dns_check.yaml.example
+++ b/conf.d/dns_check.yaml.example
@@ -17,3 +17,7 @@ instances:
       # tags:
       #   - tag:one
       #   - tag:two
+
+    - hostname: nxdomain.example.org
+      nameserver: 127.0.0.1
+      record_type: NXDOMAIN
