[postgres] Allow disable postgresql.database_size
Adds a new "collect_database_size_metrics" flag that defaults to true.

Resolves #3034

--- a/conf.d/postgres.yaml.example
+++ b/conf.d/postgres.yaml.example
@@ -64,3 +64,7 @@ instances:
 #    suggested value is False.
 #    collect_count_metrics: False
 #
+
+#    Collect database size metrics. Default value is True but they might be slow with large databases
+#    collect_database_size_metrics: False
+#
