--- a/conf.d/yarn.yaml.example
+++ b/conf.d/yarn.yaml.example
@@ -19,17 +19,16 @@ instances:
 
     # Optional tags to be applied to every emitted metric.
     # tags:
-    #   - key:value
-    #   - instance:production
+    #   - "key:value"
+    #   - "instance:production"
 
     # Optional tags retrieved from the application data to be applied to the
     # application metrics.
     # application_tags:
-    #   # tag_prefix: yarn_key
-    #   - app_queue: queue
+    # # tag_prefix: yarn_key
+    #   app_queue: queue
     # This will add a tag 'app_queue:name_of_the_queue' to the app metrics,
-    # app_queue being the tag_prefix and queue the actual YARN key. Whole list
-    # of keys on yarn api reference:
-    # https://hadoop.apache.org/docs/current/hadoop-yarn/hadoop-yarn-site/ResourceManagerRest.html#Cluster_Applications_API
+    # app_queue being the tag_prefix and queue the actual YARN key.
+    # Allowed yarn keys: applicationType, applicationTags, name, queue, user
     # By default, the application name is collected with the prefix app_name.
 
