[service_discovery][jmx] trying to pick-up JMX changes with SD. (#3010)
* [service_discovery][jmx] trying to pick-up JMX changes with SD.

[service_discovery] adding named pipe for IPC.

[util] if file doesnt exist, create it.

[service_discovery][jmxfetch] add some service discovery configurability.

[jmxfetch][service_discovery] increase max heap size for SD to 512.

[service_discovery][jmxfetch] create jmx service discovery option in config.

[service_discovery][jmx] if jmx is not up, try to bring it up - wait for it to boot too.

[service_discovery] if the previous index was None, consider that a change (bootup changes to apply).

[service_discovery][jmx] cleaning up service discovery/supervisor interactions.

[service_discovery][jmx] supervisor_proxy should not be None, cleanup.

[service_discovery][jmxfetch] avoid double-reload of checks at start-up. Refactor.

* [service_discovery][jmx] enable auto-conf for JMX checks.

* [service_discovery][jmx] some cleanup.

* [service_discovery][jmx] refactor config. Default pipe location to /opt/datadog-agent/run/

* [service_discovery][jmx] adding JMX YAML generation test.

* [service_discovery][jmx] empty result set if configs not retrievable.

* [service_discovery][tests][skip ci] unneccessary noqa.

--- a/datadog.conf.example
+++ b/datadog.conf.example
@@ -123,6 +123,9 @@ gce_updated_hostname: yes
 # and modify its value.
 # sd_template_dir: /datadog/check_configs
 #
+# Enable JMX checks for service disocvery
+# sd_jmx_enable: no
+#
 # ========================================================================== #
 # Other                                                                      #
 # ========================================================================== #
