--- a/datadog.conf.example
+++ b/datadog.conf.example
@@ -52,6 +52,8 @@ api_key:
 # developer_mode: no
 # In developer mode, the number of runs to be included in a single collector profile
 # collector_profile_interval: 20
+# In developer mode, disable profiling altogether, but still collect fine-grained agent metrics
+# allow_profiling: False
 
 # use unique hostname for GCE hosts, see http://dtdg.co/1eAynZk
 # when not specified, default: no
