--- a/.travis.yml
+++ b/.travis.yml
@@ -35,6 +35,9 @@ env:
     - TRAVIS_FLAVOR=cassandra FLAVOR_VERSION=2.0.13
     - TRAVIS_FLAVOR=cassandra FLAVOR_VERSION=2.1.3
     - TRAVIS_FLAVOR=couchdb
+    # FIXME: cannot enable docker on Travis
+    # because it needs docker and we run tests in a container
+    # - TRAVIS_FLAVOR=docker_daemon
     - TRAVIS_FLAVOR=elasticsearch FLAVOR_VERSION=0.90.13
     - TRAVIS_FLAVOR=elasticsearch FLAVOR_VERSION=1.0.3
     - TRAVIS_FLAVOR=elasticsearch FLAVOR_VERSION=1.1.2
