Removed ticks that would cause a failure

--- a/conf.d/marathon.yaml.example
+++ b/conf.d/marathon.yaml.example
@@ -6,9 +6,9 @@ instances:
 # url: the API endpoint of your Marathon master
 # - url: https://server:port
 # user: the user for marathon API or ACS token authentication
-# - user: username
+#   user: username
 # password: the password for marathon API or ACS token authentication
-# - password: password
+#   password: password
 # acs_url: the base ACS endpoint url if an ACS token is required to access the marathon API
 # NOTE: The user and password will be used to auth with the acs server if acs_url is provided
-# - acs_url: https://server:port
+#   acs_url: https://server:port
