--- a/packaging/datadog-agent/win32/install_files/datadog_win32.conf
+++ b/packaging/datadog-agent/win32/install_files/datadog_win32.conf
@@ -34,7 +34,7 @@ api_key: APIKEYHERE
 
 # use unique hostname for GCE hosts, see http://dtdg.co/1eAynZk
 # when not specified, default: no
-gce_updated_hostname: yes
+# gce_updated_hostname: no
 
 # ========================================================================== #
 # DogStatsd configuration                                                    #
