pkg: add trace-agent to supervisor

--- a/packaging/supervisor.conf
+++ b/packaging/supervisor.conf
@@ -67,5 +67,14 @@ startsecs=2
 startretries=2
 user=dd-agent
 
+[program:trace-agent]
+command=/opt/datadog-agent/bin/trace-agent
+stdout_logfile=NONE
+stderr_logfile=NONE
+startsecs=5
+startretries=3
+priority=998
+user=dd-agent
+
 [group:datadog-agent]
-programs=forwarder,collector,dogstatsd,jmxfetch,go-metro
+programs=forwarder,collector,dogstatsd,jmxfetch,go-metro,trace-agent
