--- a/conf.d/activemq.yaml.example
+++ b/conf.d/activemq.yaml.example
@@ -1,3 +1,10 @@
+##########
+# WARNING
+##########
+# This sample works only for ActiveMQ >= 5.8.0
+# If you are running a version older than that, you can refer to agent 5.10.x released
+# sample files, https://raw.githubusercontent.com/DataDog/dd-agent/5.10.1/conf.d/activemq.yaml.example
+
 instances:
   - host: localhost
     port: 1099
@@ -20,7 +27,7 @@ instances:
 init_config:
   conf:
     - include:
-        Type: Queue
+        destinationType: Queue
         attribute:
           AverageEnqueueTime:
             alias: activemq.queue.avg_enqueue_time
@@ -60,7 +67,7 @@ init_config:
             metric_type: counter
 
     - include:
-        Type: Broker
+        type: Broker
         attribute:
           StorePercentUsage:
             alias: activemq.broker.store_pct
