--- a/conf.d/docker_daemon.yaml.example
+++ b/conf.d/docker_daemon.yaml.example
@@ -57,10 +57,10 @@ instances:
     #       Container Healthchecks are available starting with docker 1.12, enabling with older
     #       versions will result in an UNKNOWN state for the service check.
     #
-    # You should whitelist the container images you wish to submit health service checks for.
-    # Example: ["tomcat", "nginx", "etcd"]
+    # You must whitelist the containers you wish to submit health service checks for.
+    # Use the same mechanism as the tagging system (see Tag:performance_tags section).
+    # Example: ["docker_image:tomcat", "container_name:web_front_nginx"]
     #
-    # health_service_checks: false
     # health_service_check_whitelist: []
 
     # Collect images stats
