--- a/conf.d/kubernetes.yaml.example
+++ b/conf.d/kubernetes.yaml.example
@@ -22,6 +22,10 @@ instances:
   # apiserver_client_crt: /path/to/client.crt
   # apiserver_client_key: /path/to/client.key
   #
+  # Similarly we use the default CA cert of the agent's service account to verify the
+  # apiserver's identity, but a custom one can be specified here.
+  # apiserver_ca_cert: /path/to/cacert.crt
+  #
   # collect_events controls whether the agent should fetch events from the kubernetes API and
   # ingest them in Datadog. To avoid duplicates, only one agent at a time across the entire
   # cluster should have this feature enabled. To enable the feature, set the parameter to `true`.
