--- a/conf.d/riak.yaml.example
+++ b/conf.d/riak.yaml.example
@@ -3,7 +3,7 @@ init_config:
 instances:
   - url: http://127.0.0.1:8098/stats
     # cacert: /path/to/ca.pem
-    # disable_cert_verify: true
+    # disable_cert_verify: false
     # tags:
     #  - optional_tag1
     #  - optional_tag2
