[win32][ec2] Add config param to allow instance ID as hostname
We can't allow that by default as it would be a backwards incompatible
change.

--- a/packaging/datadog-agent/win32/install_files/datadog_win32.conf
+++ b/packaging/datadog-agent/win32/install_files/datadog_win32.conf
@@ -36,6 +36,9 @@ api_key: APIKEYHERE
 # when not specified, default: no
 gce_updated_hostname: yes
 
+# If enabled, will use instance ID as canonical hostname for EC2 Windows hosts
+# windows_use_ec2_instance_id: no
+
 # ========================================================================== #
 # DogStatsd configuration                                                    #
 # ========================================================================== #
