--- a/conf.d/riak.yaml.example
+++ b/conf.d/riak.yaml.example
@@ -2,9 +2,9 @@ init_config:
 
 instances:
   - url: http://127.0.0.1:8098/stats
+    min_collection_interval: 60
     # cacert: /path/to/ca.pem
     # disable_cert_verify: false
-  - min_collection_interval: 60
     # tags:
     #  - optional_tag1
     #  - optional_tag2
