--- a/conf.d/riak.yaml.example
+++ b/conf.d/riak.yaml.example
@@ -2,6 +2,7 @@ init_config:
 
 instances:
   - url: http://127.0.0.1:8098/stats
+    # Riak statistics are calculated on a per-minute sliding window
     min_collection_interval: 60
     # cacert: /path/to/ca.pem
     # disable_cert_verify: false
