Added if else statement around the default  agent_headers, also added an example to the http_check.yaml. With this we can disable  the default headers that are shipped with datadog agent.

--- a/conf.d/http_check.yaml.example
+++ b/conf.d/http_check.yaml.example
@@ -124,6 +124,13 @@ instances:
     #
     # allow_redirects: true
 
+    # The (optional) include_default_header parameter can include the default headers.
+    # Default headers can be found at https://github.com/DataDog/dd-agent/blob/master/util.py#L54-L63
+    #
+    # Defaults to True.
+    #
+    #include_default_headers: false
+
     # tags:
     #   - url:http://alternative.host.example.com
     #   - env:production
