[core] add SDK check versioning to check statuses+flare.
[core] adds check versioning to AgentCheck class.

[core][agentcheck] get version from manifest if available.

[core][info] grab check version number for failed checks as well.

[core][check_status] prettify and set on checks.

[core][agent_check] load the manifest properly..

[flare] fix flare issues with manifest collection.

[core][sdk] version detection for Network Checks.

[flare] use sdk utilities.

[core][agentcheck] fix frame_idx typo.

[flakes] fixing multiple flakes.

[tests] dont copy fixtures, fix travis+appveyor

[tests][core] removing copy_check, remove_check - unneeded.

[travis] adding checksd_override variable for tests.

[service_discovery][test] grab auto_conf config from fixtures.

[service_discovery][tests] more fixes related to auto_conf

--- a/.travis.yml
+++ b/.travis.yml
@@ -23,6 +23,7 @@ env:
     - CONCURRENCY=2
     - NOSE_FILTER="not windows"
     - INTEGRATIONS_DIR=$HOME/embedded
+    - CHECKSD_OVERRIDE=$TRAVIS_BUILD_DIR/tests/checks/fixtures/checks
     - PIP_CACHE=$HOME/.cache/pip
     - VOLATILE_DIR=/tmp
     - DD_CASHER_DIR=/tmp/casher
