--- a/.travis.yml
+++ b/.travis.yml
@@ -10,8 +10,8 @@ language: python
 python:
   - "2.7"
 
-# services:
-#   - docker
+services:
+  - docker
 
 cache:
   directories:
@@ -32,8 +32,8 @@ env:
     - DD_CASHER_DIR=/tmp/casher
   matrix:
     - TRAVIS_FLAVOR=default
-    - TRAVIS_FLAVOR=core_integration
-    - TRAVIS_FLAVOR=checks_mock
+    # - TRAVIS_FLAVOR=core_integration
+    # - TRAVIS_FLAVOR=checks_mock
 
 # Override travis defaults with empty jobs
 before_install: echo "OVERRIDING TRAVIS STEPS"
