[trace-agent] restart on unexpected error code
This patch restarts the trace agent if it exits with an error code
that is different from 0. Else, it would restart in some cases but
would consider as 'expected' the return code 2 which is what Go
returns for builtin runtime errors.

--- a/packaging/supervisor.conf
+++ b/packaging/supervisor.conf
@@ -75,6 +75,8 @@ startsecs=5
 startretries=3
 priority=998
 user=dd-agent
+autorestart=unexpected
+exitcodes=0
 
 [group:datadog-agent]
 programs=forwarder,collector,dogstatsd,jmxfetch,go-metro,trace-agent
