--- a/packaging/supervisor.conf
+++ b/packaging/supervisor.conf
@@ -18,7 +18,7 @@ nodaemon = false
 pidfile = /opt/datadog-agent/run/datadog-supervisord.pid
 logfile_backups = 10
 user=dd-agent
-environment=PYTHONPATH=/opt/datadog-agent/agent:/opt/datadog-agent/agent/checks,LANG=POSIX
+environment=PYTHONPATH=/opt/datadog-agent/agent,LANG=POSIX
 
 [program:collector]
 command=/opt/datadog-agent/embedded/bin/python /opt/datadog-agent/agent/agent.py foreground --use-local-forwarder
