[travis] lets try to drop a newer ruby in the environment.
[travis] pinning httparty to previous version.

--- a/.travis.yml
+++ b/.travis.yml
@@ -39,7 +39,9 @@ matrix:
       env: TRAVIS_FLAVOR=core_integration
 
 # Override travis defaults with empty jobs
-before_install: echo "OVERRIDING TRAVIS STEPS"
+before_install:
+- rvm install 2.1.5
+# before_install: echo "OVERRIDING TRAVIS STEPS"
 install: echo "OVERRIDING TRAVIS STEPS"
 before_script: echo "OVERRIDING TRAVIS STEPS"
 
@@ -49,7 +51,7 @@ script:
   # Needed if no cache exists
   - mkdir -p $INTEGRATIONS_DIR
   - ls -al $INTEGRATIONS_DIR
-  - 'rake ci:run'
+  - bundle exec rake ci:run
   - ls -al $INTEGRATIONS_DIR
 
 
