--- a/datadog.conf.example
+++ b/datadog.conf.example
@@ -49,6 +49,9 @@ api_key:
 # Incorporate security-groups into tags collected from AWS EC2
 # collect_security_groups: no
 
+# Collect Rancher host labels as agent tags
+# collect_rancher_host_labels: no
+
 # Enable Agent Developer Mode
 # Agent Developer Mode collects and sends more fine-grained metrics about agent and check performance
 # developer_mode: no
