add docker/mesos/dcos host tags via the MetadataCollector interface
- add orchestrator.MetadataCollector.get_host_tags() and method in Mesosutil
- add DockerUtil.get_host_tags() for docker_version
- detect mesos and dcos agents via http/https tests
- retrieve docker_version, mesos_version and dcos_version host tags
- add new collect_orchestrator_tags conf option (default True)

--- a/datadog.conf.example
+++ b/datadog.conf.example
@@ -30,6 +30,9 @@ api_key:
 # Set the host's tags (optional)
 # tags: mytag, env:prod, role:database
 
+# Collect docker orchestrator name and version as agent tags
+# collect_orchestrator_tags: yes
+
 # Set timeout in seconds for outgoing requests to Datadog. (default: 20)
 # When a request timeout, it will be retried after some time.
 # It will only be deleted if the forwarder queue becomes too big. (30 MB by default)
