--- a/packaging/supervisor.conf
+++ b/packaging/supervisor.conf
@@ -78,5 +78,16 @@ user=dd-agent
 autorestart=unexpected
 exitcodes=0
 
+[program:process-agent]
+command=/opt/datadog-agent/bin/process-agent
+stdout_logfile=NONE
+stderr_logfile=NONE
+startsecs=5
+startretries=3
+priority=998
+user=dd-agent
+autorestart=unexpected
+exitcodes=0
+
 [group:datadog-agent]
-programs=forwarder,collector,dogstatsd,jmxfetch,go-metro,trace-agent
+programs=forwarder,collector,dogstatsd,jmxfetch,go-metro,trace-agent,process-agent
