[dogstatsd6] renaming feature flag.

--- a/datadog.conf.example
+++ b/datadog.conf.example
@@ -158,6 +158,10 @@ gce_updated_hostname: yes
 
 # If you don't want to enable the DogStatsd server, set this option to no
 # use_dogstatsd: yes
+#
+# Note: this is a beta feature
+# Enables dogstatsd6 on agent5. Will disable the default dogstatsd daemon.
+# dogstatsd6_enable: false
 
 #  Make sure your client is sending to the same port.
 # dogstatsd_port: 8125
