--- a/packaging/osx/supervisor.conf
+++ b/packaging/osx/supervisor.conf
@@ -45,7 +45,7 @@ startretries=3
 priority=998
 
 [program:dogstatsd6]
-command=/opt/datadog-agent/bin/dogstatsd6 start -l
+command=/opt/datadog-agent/bin/dogstatsd6 start -l -f /etc/dd-agent/datadog.conf
 stdout_logfile=NONE
 stderr_logfile=NONE
 startsecs=2
