--- a/packaging/supervisor.conf
+++ b/packaging/supervisor.conf
@@ -49,7 +49,7 @@ priority=998
 user=dd-agent
 
 [program:dogstatsd6]
-command=/opt/datadog-agent/bin/dogstatsd6 start -l
+command=/opt/datadog-agent/bin/dogstatsd6 start -l -f /etc/dd-agent/datadog.conf
 stdout_logfile=NONE
 stderr_logfile=NONE
 startsecs=2
