--- a/datadog.conf.example
+++ b/datadog.conf.example
@@ -162,6 +162,9 @@ gce_updated_hostname: yes
 # Note: this is a beta feature
 # Enables dogstatsd6 on agent5. Will disable the default dogstatsd daemon.
 # dogstatsd6_enable: false
+#
+# Port from which to collect expvar statistics
+# dogstatsd6_stat_port: 5000
 
 #  Make sure your client is sending to the same port.
 # dogstatsd_port: 8125
