--- a/datadog.conf.example
+++ b/datadog.conf.example
@@ -64,6 +64,11 @@ api_key:
 # when not specified, default: no
 gce_updated_hostname: yes
 
+# Always add the socket hostname to the host aliases
+# This is very dangerous and could, in the worst case, merge all your VMs into one.
+# Do not use unless you know what you're going to get.
+# danger_always_add_socket_hostname: no
+
 # Set the threshold for accepting points to allow anything
 # within recent_point_threshold seconds (default: 30)
 # recent_point_threshold: 30
