--- a/packaging/osx/supervisor.conf
+++ b/packaging/osx/supervisor.conf
@@ -45,12 +45,13 @@ startretries=3
 priority=998
 
 [program:dogstatsd6]
-command=/opt/datadog-agent/bin/dogstatsd6 start -l -f /etc/dd-agent/datadog.conf
+command=/opt/datadog-agent/bin/dogstatsd6 start -l -f /opt/datadog-agent/etc/dd-agent/datadog.conf
 stdout_logfile=NONE
 stderr_logfile=NONE
 startsecs=2
 startretries=3
 priority=998
+exitcodes=0
 
 [program:jmxfetch]
 command=/opt/datadog-agent/embedded/bin/python /opt/datadog-agent/agent/jmxfetch.py
