--- a/packaging/supervisor.conf
+++ b/packaging/supervisor.conf
@@ -56,6 +56,7 @@ startsecs=2
 startretries=3
 priority=998
 user=dd-agent
+exitcodes=0
 
 [program:jmxfetch]
 command=/opt/datadog-agent/embedded/bin/python /opt/datadog-agent/agent/jmxfetch.py
