--- a/packaging/osx/supervisor.conf
+++ b/packaging/osx/supervisor.conf
@@ -44,15 +44,6 @@ startsecs=5
 startretries=3
 priority=998
 
-[program:dogstatsd6]
-command=/opt/datadog-agent/bin/dogstatsd6 start -l -f /opt/datadog-agent/etc/dd-agent/datadog.conf
-stdout_logfile=NONE
-stderr_logfile=NONE
-startsecs=2
-startretries=3
-priority=998
-exitcodes=0
-
 [program:jmxfetch]
 command=/opt/datadog-agent/embedded/bin/python /opt/datadog-agent/agent/jmxfetch.py
 stdout_logfile=NONE
@@ -62,4 +53,4 @@ priority=999
 startsecs=3
 
 [group:datadog-agent]
-programs=forwarder,collector,dogstatsd,dogstatsd6,jmxfetch
+programs=forwarder,collector,dogstatsd,jmxfetch
