--- a/packaging/supervisor.conf
+++ b/packaging/supervisor.conf
@@ -48,16 +48,6 @@ startretries=3
 priority=998
 user=dd-agent
 
-[program:dogstatsd6]
-command=/opt/datadog-agent/bin/dogstatsd6 start -l -f /etc/dd-agent/datadog.conf
-stdout_logfile=NONE
-stderr_logfile=NONE
-startsecs=2
-startretries=3
-priority=998
-user=dd-agent
-exitcodes=0
-
 [program:jmxfetch]
 command=/opt/datadog-agent/embedded/bin/python /opt/datadog-agent/agent/jmxfetch.py
 stdout_logfile=NONE
@@ -100,4 +90,4 @@ autorestart=unexpected
 exitcodes=0
 
 [group:datadog-agent]
-programs=forwarder,collector,dogstatsd,dogstatsd6,jmxfetch,go-metro,trace-agent,process-agent
+programs=forwarder,collector,dogstatsd,jmxfetch,go-metro,trace-agent,process-agent
