--- a/packaging/supervisor.conf
+++ b/packaging/supervisor.conf
@@ -47,6 +47,7 @@ startsecs=5
 startretries=3
 priority=998
 user=dd-agent
+environment=DD_CONF_PATH=/etc/dd-agent/datadog.yaml
 
 [program:jmxfetch]
 command=/opt/datadog-agent/embedded/bin/python /opt/datadog-agent/agent/jmxfetch.py
