--- a/datadog.conf.example
+++ b/datadog.conf.example
@@ -109,6 +109,10 @@ gce_updated_hostname: yes
 # histogram_aggregates: max, median, avg, count
 # histogram_percentiles: 0.95
 
+# Tags to remove When using the use_histogram option in the docker_daemon and
+# kubernetes integrations to reduce the metrics' cardinality
+# docker_histo_striptags: container_name,pod_name,kube_replica_set,kube_replication_controller
+
 # ========================================================================== #
 # Service Discovery                                                          #
 # See https://docs.datadoghq.com/guides/autodiscovery/ for details #
