[Logs] Update supervisor conf to run logs-agent on startup

--- a/packaging/supervisor.conf
+++ b/packaging/supervisor.conf
@@ -89,5 +89,16 @@ user=dd-agent
 autorestart=unexpected
 exitcodes=0
 
+[program:logs-agent]
+command=/opt/datadog-agent/bin/logs-agent --ddconfig /etc/dd-agent/conf.d
+stdout_logfile=/var/log/datadog/logs-agent.log
+stderr_logfile=/var/log/datadog/logs-agent.log
+startsecs=5
+startretries=3
+priority=997
+user=dd-agent
+autorestart=unexpected
+exitcodes=0
+
 [group:datadog-agent]
-programs=forwarder,collector,dogstatsd,jmxfetch,go-metro,trace-agent,process-agent
+programs=forwarder,collector,dogstatsd,jmxfetch,go-metro,trace-agent,process-agent,logs-agent
