--- a/datadog.conf.example
+++ b/datadog.conf.example
@@ -111,7 +111,7 @@ gce_updated_hostname: yes
 
 # Tags to remove When using the use_histogram option in the docker_daemon and
 # kubernetes integrations to reduce the metrics' cardinality
-# docker_histo_striptags: container_name,pod_name,kube_replica_set,kube_replication_controller
+# docker_histo_striptags: container_name,pod_name,kube_replica_set,kube_replication_controller,kube_pod-template-hash,kube_pod-template-generation
 
 # ========================================================================== #
 # Service Discovery                                                          #
