--- a/requirements.txt
+++ b/requirements.txt
@@ -27,6 +27,8 @@ ntplib==0.3.3
 python-consul==0.4.7
 # utils/service_discovery/config_stores.py
 python-etcd==0.4.5
+#pywin32 for windows
+pywin32==219
 # the libyaml bindings are optional
 pyyaml==3.11
 # note: requests is also used in many checks
