--- a/requirements.txt
+++ b/requirements.txt
@@ -28,7 +28,7 @@ python-consul==0.4.7
 # utils/service_discovery/config_stores.py
 python-etcd==0.4.5
 #pywin32 for windows
-pywin32==221; sys_platform == 'windows'
+pywin32==221; sys_platform == 'win32'
 # the libyaml bindings are optional
 pyyaml==3.11
 # note: requests is also used in many checks
