[Logs] Update supervisor conf to run logs-agent on startup
The logs-agent startup command has been updated, this commit
takes the update into account

--- a/packaging/supervisor.conf
+++ b/packaging/supervisor.conf
@@ -90,7 +90,7 @@ autorestart=unexpected
 exitcodes=0
 
 [program:logs-agent]
-command=/opt/datadog-agent/bin/logs-agent --ddconfig /etc/dd-agent
+command=/opt/datadog-agent/bin/logs-agent --ddconfig /etc/dd-agent/datadog.conf --ddconfd /etc/dd-agent/conf.d
 stdout_logfile=/var/log/datadog/logs-agent.log
 stderr_logfile=/var/log/datadog/logs-agent.log
 startsecs=5
