change to enable_gohai

--- a/datadog.conf.example
+++ b/datadog.conf.example
@@ -27,8 +27,8 @@ api_key:
 # Enable the trace agent.
 # apm_enabled: false
 
-# Disable gohai metadata collection
-# disable_gohai: false
+# Enable gohai metadata collection
+# enable_gohai: true
 
 # Set the host's tags (optional)
 # tags: mytag, env:prod, role:database
