adds option to toggle gohai metadata collection (#3572)

--- a/datadog.conf.example
+++ b/datadog.conf.example
@@ -27,6 +27,9 @@ api_key:
 # Enable the trace agent.
 # apm_enabled: false
 
+# Enable gohai metadata collection
+# enable_gohai: true
+
 # Set the host's tags (optional)
 # tags: mytag, env:prod, role:database
 
