add jmx_custom_jar option to datadog.yaml
This enables users to load a custom jar at jmxfetch start,
to allow using them reliably in AD templates

Only supporting a single string in agent5 to enable the use of
the DD_CONF_JMX_CUSTOM_JAR envvar binding, agent6 will support
a string array

--- a/datadog.conf.example
+++ b/datadog.conf.example
@@ -157,6 +157,9 @@ gce_updated_hostname: yes
 # Enable JMX checks for service discovery
 # sd_jmx_enable: no
 #
+# If you require a custom jar to be loaded for JMX checks, set its path here
+# jmx_custom_jar: /jmx-jars/jboss-cli-client.jar
+#
 # Docker labels as tags
 # We can extract docker labels and add them as tags to all metrics reported by service discovery.
 # All you have to do is supply a comma-separated list of label names to extract from containers when found.
