--- a/.travis.yml
+++ b/.travis.yml
@@ -14,6 +14,7 @@ cache:
     - $HOME/virtualenv/python$TRAVIS_PYTHON_VERSION.9
     - vendor/cache
     - $HOME/embedded
+    - $HOME/integrations-core
 
 matrix:
   fast_finish: true
@@ -27,6 +28,7 @@ env:
     - PIP_CACHE=$HOME/.cache/pip
     - VOLATILE_DIR=/tmp
     - DD_CASHER_DIR=/tmp/casher
+    - INTEGRATIONS_CORE_BRANCH=master
   matrix:
     - TRAVIS_FLAVOR=default
     - TRAVIS_FLAVOR=checks_mock
@@ -42,8 +44,10 @@ matrix:
 # Override travis defaults with empty jobs
 before_install:
 - rvm install 2.1.5
-# before_install: echo "OVERRIDING TRAVIS STEPS"
-install: echo "OVERRIDING TRAVIS STEPS"
+
+install:
+  - git -C $HOME/integrations-core pull || git clone -b $INTEGRATIONS_CORE_BRANCH --depth 1 https://github.com/DataDog/integrations-core.git $HOME/integrations-core
+  - cd $HOME/integrations-core/datadog_checks_base && python setup.py bdist_wheel && pip install . && cd -
 before_script: echo "OVERRIDING TRAVIS STEPS"
 
 script:
