fix docker image tags for kafka

--- a/.travis.yml
+++ b/.travis.yml
@@ -39,8 +39,8 @@ env:
     - TRAVIS_FLAVOR=cassandra FLAVOR_VERSION=2.2.10
     - TRAVIS_FLAVOR=checks_mock
     - TRAVIS_FLAVOR=kafka FLAVOR_VERSION=0.10.1.0-1
-    # - TRAVIS_FLAVOR=kafka FLAVOR_VERSION=1.0.1-1
-    # - TRAVIS_FLAVOR=kafka FLAVOR_VERSION=1.1.0-1
+    - TRAVIS_FLAVOR=kafka FLAVOR_VERSION=1.0.1
+    - TRAVIS_FLAVOR=kafka FLAVOR_VERSION=1.1.0
     - TRAVIS_FLAVOR=tomcat
     - TRAVIS_FLAVOR=solr FLAVOR_VERSION=6.2
 
