Revert "[pyyaml] allow patching of unsafe pyyaml operations (#3808)"
This reverts commit f2c90aa2a4e1d0ea6d92b283802537651f6a7360.

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -24,14 +24,12 @@ Style/Documentation:
 Style/SingleLineBlockParams:
   Enabled: false
 
-Style/FrozenStringLiteralComment:
-  Enabled: false
-
 Lint/RescueWithoutErrorClass:
   Enabled: false
 
 BlockLength:
   Max: 110
 
-Layout/EndOfLine:
+Style/EndOfLine:
   Enabled: false
+
